--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
         href="https://images.squarespace-cdn.com/content/v1/695e124922ee964abeffdd7f/5c904cbf-4c93-4b78-bda1-605810c585d2/mold.png?format=100w" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description"
-        content="CA Mold Solutions - Certified Mold Inspection & Remediation. Create a healthier indoor environment today. Serving all of California." />
+        content="CA Mold Solutions - Certified Mold Inspection & Remediation. Expert testing, moisture detection, and safe removal services for homes and businesses throughout California. IICRC Certified." />
+    <meta name="keywords"
+        content="mold inspection, mold remediation, air quality testing, IICRC certified, California mold removal, thermal imaging, moisture detection, mold testing lab" />
+    <meta name="author" content="CA Mold Solutions" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://camoldsolutions.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="business.business" />
+    <meta property="og:url" content="https://camoldsolutions.com/" />
+    <meta property="og:title" content="CA Mold Solutions | Certified Mold Inspection & Remediation" />
+    <meta property="og:description"
+        content="Expert mold inspection, testing, and remediation services. Protecting your health and property with science-based solutions." />
+    <meta property="og:image"
+        content="https://images.squarespace-cdn.com/content/v1/695e124922ee964abeffdd7f/3afe0f26-ea59-467c-8422-779a5c0b9cb0/MOD+4.PNG" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://camoldsolutions.com/" />
+    <meta property="twitter:title" content="CA Mold Solutions | Certified Mold Inspection & Remediation" />
+    <meta property="twitter:description"
+        content="Expert mold inspection, testing, and remediation services. Protecting your health and property with science-based solutions." />
+    <meta property="twitter:image"
+        content="https://images.squarespace-cdn.com/content/v1/695e124922ee964abeffdd7f/3afe0f26-ea59-467c-8422-779a5c0b9cb0/MOD+4.PNG" />
+
+    <!-- Geo Tags -->
+    <meta name="geo.region" content="US-CA" />
+    <meta name="geo.placename" content="California" />
+    <meta name="geo.position" content="36.7783;-119.4179" />
+    <meta name="ICBM" content="36.7783, -119.4179" />
+
     <title>CA Mold Solutions | Certified Mold Inspection & Remediation</title>
 </head>
 
