fix: add static meta tag for Google Search Console verification

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         content="mold inspection, mold remediation, air quality testing, IICRC certified, California mold removal, thermal imaging, moisture detection, mold testing lab" />
     <meta name="author" content="CA Mold Solutions" />
     <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="google6dda8d96c610d515" />
     <link rel="canonical" href="https://camoldsolutions.com/" />
 
     <!-- Open Graph / Facebook -->
