perf: reach 100/100 performance & accessibility with preloads, webp, and contrast fixes

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
     <meta name="geo.position" content="36.7783;-119.4179" />
     <meta name="ICBM" content="36.7783, -119.4179" />
 
+    <!-- Preload Critical LCP Assets -->
+    <link rel="preload" as="image"
+        href="https://images.squarespace-cdn.com/content/v1/695e124922ee964abeffdd7f/3afe0f26-ea59-467c-8422-779a5c0b9cb0/MOD+4.PNG?format=webp&width=1500"
+        fetchpriority="high" />
+    <link rel="preload" as="image" href="/Logo_Alpha.png" />
+
     <title>CA Mold Solutions | Certified Mold Inspection & Remediation</title>
 </head>
 
